--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,6 +28,19 @@ checksum:
   name_template: 'checksums.txt'
 snapshot:
   name_template: "{{ .Tag }}-next"
+brew:
+  name: ecs-local
+  github:
+    owner: Fullscreen
+    name: homebrew-tap
+  commit_author:
+    name: devops
+    email: devops@fullscreen.com
+  folder: Formula
+  homepage: https://github.com/Fullscreen/ecs-local
+  skip_upload: true
+  install: |
+    bin.install ""ecs-local""
 changelog:
   sort: asc
   filters:
